--- a/README
+++ b/README
@@ -1,10 +1,8 @@
-AppAtelier
-=================================
+# AppAtelier
 
-AppAtelier is an Open Source E-Commerce Platform based on Play Framework and Java.
+**AppAtelier is an Open Source E-Commerce Platform based on Play Framework and Java.**
 
 
-Copyright
-=================================
+# Copyright
 
-Copyright (C) 2016-2016 by Kelwy Oliveira, Mayara Ribeiro and Raiane Amaral. <kelwyduarte@gmail.com>
+**Copyright (C) 2016-2016 by Kelwy Oliveira, Mayara Ribeiro and Raiane Amaral. <kelwyduarte@gmail.com>**
